# pi-gateway-auth-service-clean

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
deploy/nginx/: default.conf
services/auth_service/: Dockerfile
services/auth_service/app/: config.py  deps.py  main.py  models.py  rate_limit.py  schemas.py  security.py
services/auth_service/app/routers/: __init__.py  admin.py  auth.py
services/auth_service/app/services/: audit.py
services/gateway/: Dockerfile
services/gateway/app/: config.py  main.py  security.py
tests/auth_service/: test_gateway_auth.py  test_rate_limit.py  test_security.py
